- Added a new improvement type, weaponspecificdice. This provides a dicepool bonus to a specific weapon, idenfiied by its internalid. Optional attribute "type" allows filtering by ranged or melee weapons. Used by weapon foci.
- Replaced selectweapon bonus on weapon foci with weaponspecificdice, as above.

Application Fixes:
- Fixed an issue with the Point Buy form incorrectly setting metavariant metatypes to be themselves (ie Dryad (Dryad)).

Data Changes:
- Fixed issues with the Dodge, Bonus Street Cred and Street Cred Multiplier custom improvements. 
- Added missing adept way discounts to the Mystic Aptitude and State of Purity powers to render them compatible with the Magician's Way.
- Dareadrenaline properly allows the Poor Self Control (Thrill Seeker) to be taken in addition to it. To accommodate this, a hidden version of the quality has been added.
- The Stock weapon accessory, apparently a legacy item from 4e Arsenal, has been flagged as hidden. Customdata folder has been created to unhide it. 
- The Technoshaman quality/stream now properly allows the creation of a Sprite Pet. 
- Fixed typos in mentors.xml. Fixed issues with the Chaos and Holy Text not poroperly being able to take their powers for free. Closes #3955
- Added customdata to allow the Hold the Door and Escaped Custody qualities to be taken by anyone, instead of just technomancers. Fix provided by Keeper M.
- Added action type to State of Purity power. Fix provided by Keeper M.
- Added 'traditional' traditions with bonuses from FA. Fix provided by Keeper M.
- Added customdata for Morrissey Alta's availability. Fix provided by Keeper M.
- Fixed typo in the Renraku Red Samurai Katana. Fix provided by Keeper M.
- Adjusted spells that require being taken by Adept to use Required tags instead of being a hardcoded blacklist for non-Adepts. IMPORTANT: 
- Added missing MAG attributes to the Banshee, Dzoo-Noo-Qua, Goblin, Vampire and Sukuyan qualities. Closes #3611