@@ -7839,7 +7839,7 @@
 			<text>&amp;Favorit umschalten</text>
 		</string>
 		<string>
-			<key>Treenode_Roster_FavouriteCharacters</key>
+			<key>Treenode_Roster_FavoriteCharacters</key>
 			<text>Favorisierte Charaktere</text>
 		</string>
 		<string>
