@@ -1423,7 +1423,7 @@
       <text>Watch Folder</text>
     </string>
     <string>
-      <key>Treenode_Roster_FavouriteCharacters</key>
+      <key>Treenode_Roster_FavoriteCharacters</key>
       <text>Favorite Characters</text>
     </string>
     <string>
