@@ -7447,7 +7447,7 @@ Un saul attribut peut atteindre sa valeur maximum durant la création de personn
 			<text>Personnages récents</text>
 		</string>
 		<string>
-			<key>Treenode_Roster_FavouriteCharacters</key>
+			<key>Treenode_Roster_FavoriteCharacters</key>
 			<text>Personnages préférés</text>
 		</string>
 		<string>
