@@ -1181,7 +1181,7 @@
       <text>Observar Pasta</text>
     </string>
     <string>
-      <key>Treenode_Roster_FavouriteCharacters</key>
+      <key>Treenode_Roster_FavoriteCharacters</key>
       <text>Personagens Favoritos</text>
     </string>
     <!-- End Region -->
