@@ -8426,7 +8426,7 @@
 			<text>翻译程序</text>
 		</string>
 		<string>
-			<key>Treenode_Roster_FavouriteCharacters</key>
+			<key>Treenode_Roster_FavoriteCharacters</key>
 			<text>特别喜欢的角色</text>
 		</string>
 		<string>
